syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/paymentterm/paymentterm_messages_description.proto";



//Platform

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.paymentterm";
option java_outer_classname = "PaymentTermServiceDescriptionProto";

package avenue.rms.protobuf.paymentterm;

service PaymentTermServiceProto {

  rpc list (ListPaymentTermRequestProto) returns (ListPaymentTermResponseProto) {
  }

  rpc get (GetPaymentTermRequestProto) returns (GetPaymentTermResponseProto) {
  }


  rpc add (AddPaymentTermRequestProto) returns (AddPaymentTermResponseProto) {
  }

  rpc update (UpdatePaymentTermRequestProto) returns (UpdatePaymentTermResponseProto) {
  }

  rpc delete (DeletePaymentTermRequestProto) returns (DeletePaymentTermResponseProto) {
  }

}

message CountPaymentTermRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message BulkDeletePaymentTermRequestProto {
  repeated string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message BulkDeletePaymentTermResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  repeated avenue.financial.protobuf.paymentterm.PaymentTermProto data = 5;
}

message CountPaymentTermResponseProto {
  int32 limit = 1;
  int32 page_number = 2;
  int32 pages_count = 3;
  int32 total_count = 4;
}

message ListPaymentTermResponseProto {
  repeated avenue.financial.protobuf.paymentterm.PaymentTermProto data = 1;
}

message GetPaymentTermResponseProto {
  avenue.financial.protobuf.paymentterm.PaymentTermProto data = 1;
}

message GetPaymentTermRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestParamProto param = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message ListPaymentTermRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}




message AddPaymentTermRequestProto {
  avenue.financial.protobuf.paymentterm.AddPaymentTermProto data = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message UpdatePaymentTermRequestProto {
  string id = 1;
  avenue.financial.protobuf.paymentterm.UpdatePaymentTermProto data = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message DeletePaymentTermRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}


message AddPaymentTermResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.paymentterm.PaymentTermProto data = 5;
}

message UpdatePaymentTermResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.paymentterm.PaymentTermProto data = 5;
}

message DeletePaymentTermResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.paymentterm.PaymentTermProto data = 5;
}








